language-server/src/tests/snapshots/gleam_language_server__tests__action__replace_underscore_with_function_return_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble() -> _ {\n    12\n}\n    "
---
----- BEFORE ACTION

pub fn wibble() -> _ {
                   ↑  
    12
}
    


----- AFTER ACTION

pub fn wibble() -> Int {
    12
}
