language-server/src/tests/snapshots/gleam_language_server__tests__action__split_case_branch_partial_first_two.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn go(n: Int) {\n  case n {\n    1 | 2 | 3 | 4 -> todo\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION

pub fn go(n: Int) {
  case n {
    1 | 2 | 3 | 4 -> todo
    ▔▔▔▔↑                
    _ -> todo
  }
}


----- AFTER ACTION

pub fn go(n: Int) {
  case n {
    1 -> todo
    2 -> todo
    3 | 4 -> todo
    _ -> todo
  }
}
